# asteroid-hrm

./: CMakeLists.txt  README.md  asteroid-hrm.desktop.template  asteroid-hrm.in  asteroid-hrm.pro  main.cpp  main.qml
i18n/: asteroid-hrm.ain.ts  asteroid-hrm.ar.ts  asteroid-hrm.ast.ts  asteroid-hrm.az.ts  asteroid-hrm.be.ts  asteroid-hrm.bqi.ts  asteroid-hrm.ca.ts  asteroid-hrm.cs.ts  asteroid-hrm.da.ts  asteroid-hrm.de_DE.ts  asteroid-hrm.desktop.h  asteroid-hrm.el.ts  asteroid-hrm.en_GB.ts  asteroid-hrm.eo.ts  asteroid-hrm.es.ts  asteroid-hrm.es_AR.ts  asteroid-hrm.fa.ts  asteroid-hrm.fi.ts  asteroid-hrm.fr.ts  asteroid-hrm.gl.ts  asteroid-hrm.he.ts  asteroid-hrm.hi.ts  asteroid-hrm.hr.ts  asteroid-hrm.hu.ts  asteroid-hrm.ia.ts  asteroid-hrm.id.ts  asteroid-hrm.isv.ts  asteroid-hrm.it.ts  asteroid-hrm.ja.ts  asteroid-hrm.ka.ts  asteroid-hrm.kab.ts  asteroid-hrm.ko.ts  asteroid-hrm.lb.ts  asteroid-hrm.lt.ts  asteroid-hrm.mr.ts  asteroid-hrm.ms.ts  asteroid-hrm.nb_NO.ts  asteroid-hrm.nl_BE.ts  asteroid-hrm.nl_NL.ts  asteroid-hrm.oc.ts  (+18 more)
src/: CMakeLists.txt  main.qml
